--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   location: ^1.3.4
   transparent_image: ^0.1.0
   carousel: ^0.1.0
+  intl: ^0.15.2
 
 dev_dependencies:
   flutter_test:
